--- a/dxapp.json
+++ b/dxapp.json
@@ -1,21 +1,21 @@
 {
   "name": "check_for_empty_vcf",
   "title": "check for empty vcf",
-  "summary": "v1.0 - check for empty vcf",
+  "summary": "v1.1 - check for empty vcf",
   "tags": [
     "email", "cancer","swift"
   ],
   "properties": {
-    "github release": "v1.0"
+    "github release": "v1.1"
   },
   "dxapi": "1.0.0",
   "inputSpec": [
     {
       "name": "vcfs",
-      "label": "all vcfs from varscan",
+      "label": "vcfs to check if they are empty",
       "help": "A list of vcf files that are sent to Ingenuity.",
       "class": "array:file",
-      "patterns": ["*.vcf"]
+      "patterns": ["*.vcf","*.vcf.gz"]
     },
     {
       "name": "email",
